chore: harden container smoke and reduce detekt debt